kubernetes/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: useful-comments-sorter-stateful
  labels:
    app: useful-comments-sorter
spec:
  serviceName: useful-comments-sorter
  replicas: 1
  selector:
    matchLabels:
      app: useful-comments-sorter
  template:
    metadata:
      labels:
        app: useful-comments-sorter
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: useful-comments-sorter
        image: ghcr.io/piaimarket-flow-finder/list-vectorizer:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
