kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: useful-comments-sorter-ingress
spec:
  ingressClassName: nginx-ext
  tls:
    - hosts:
        - useful-comments-sorter.kube-ext.isc.heia-fr.ch
  rules:
    - host: useful-comments-sorter.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: useful-comments-sorter-service
                port:
                  number: 80
